--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-keras
+keras==2.2.4
 git+https://www.github.com/keras-team/keras-contrib.git
-matplotlib
-numpy
+matplotlib==3.3.4
+numpy==1.19.5
 scipy
 pillow
-tensorflow
-pandas
+tensorflow==1.14.0
+pandas==1.1.5
 pathlib
 dtaidistance
 fastdtw
